--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.3.0",
-    "mongoose": "^8.9.6"
+    "mongoose": "^8.9.6",
+    "react-router-dom": "^7.1.5"
   }
 }
